--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,4 +106,6 @@ dependencies {
 
     // Image Loading
     implementation 'io.coil-kt:coil:1.2.1'
+
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.23'
 }
